--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <div id="nav">
         <h3><b>UN</b>HUMAN</h3>
-        <button>LAUNCH SOON</button>
+        <button id="launchBtn">LAUNCH SOON</button>
+
     </div>
     <div id="main">
         <div id="page">
@@ -22,8 +23,8 @@
             </div>
             <h3>Crafted for those who transcend the ordinary.<br> Step into apparel that speaks to every  <br>
             <b>SENSE.</b></h3>
+            <canvas id="dotsCanvas"></canvas>
             
-            <canvas></canvas>
         </div>
         <div id="page1">
             <div id="right-text">
@@ -75,5 +76,7 @@ STAY TUNED FOR<BR> <h2><i>DEBUT.</i></h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js" integrity="sha512-AMl4wfwAmDM1lsQvVBBRHYENn1FR8cfOTpt8QVbb/P55mYOdahHD4LmHM1W55pNe3j/3od8ELzPf/8eNkkjISQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
+    
+
 </body>
 </html>
