--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="nav">
         <h3><b>UN</b>HUMAN</h3>
-        <button id="launchBtn">LAUNCH SOON</button>
+        <button id="launchBtn">DROP INN</button>
 
     </div>
     <div id="main">
